# TinCan.NET

./: .gitignore  README.md  TinCan.NET.sln
TinCan.NET/: .gitignore  App.axaml  App.axaml.cs  NativeMethods.txt  Plugin.cs  Program.cs  TinCan.NET.csproj  UIManager.cs  ViewLocator.cs
TinCan.NET.Native/: .gitignore  CMakeLists.txt  CMakePresets.json  ipc-protocol.md  vcpkg.json
TinCan.NET.Native/src/: CMakeLists.txt  api.hpp  global.cpp  global.hpp  mp_check.hpp  plugin.cpp  socket.hpp  system.hpp  test_client.cpp
TinCan.NET.Native/src/duthomhas/: is_iterable.hpp
TinCan.NET.Native/src/ipc/: postbox.hpp  safe_queue.hpp
TinCan.NET.Native/src/oslib/: common.hpp  fsutil.hpp  process.hpp  process_posix.cpp  process_win32.cpp  secrand.hpp
TinCan.NET.Native/src/oslib/details/: convert.hpp  meta.hpp
TinCan.NET.Native/src/util/: fs_helper.cpp  fs_helper.hpp  gate.hpp  secrand.cpp  secrand.hpp  tempfile.hpp  winutil.hpp
TinCan.NET/Controls/: Joystick.cs
TinCan.NET/Helpers/: DnneAttributes.cs  MathHelpers.cs  MupenTypes.cs  ResourceHelpers.cs  SDLHelpers.cs  StructDefinitions.cs  UCString.cs
TinCan.NET/Models/: IPCServer.cs  Postbox.cs  SuicideThread.cs  SuicideThread_Posix.cs  SuicideThread_Win32.cs  WindowUtils.cs
TinCan.NET/Models/Libraries/: X11.cs
TinCan.NET/Models/Win32/: Win32PInvokeExtras.cs
TinCan.NET/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
TinCan.NET/Views/: MainWindow.axaml  MainWindow.axaml.cs
docs/: dmtp.md
